update post: State Design Pattern

--- a/clc63evi0001308m93jop931x.md
+++ b/clc63evi0001308m93jop931x.md
@@ -1,5 +1,7 @@
 # State Design Pattern
 
+# The Story
+
 Hey everyone. I am back with another design pattern. If you are new to the blog and willing to learn design patterns, you can find the explained design patterns in [this series](https://dulitharajapaksha.hashnode.dev/series/design-patterns-101).
 
 Have you heard about Banana Man? Of course not. That is a character in my world, The Banana Republic. Unlike other characters, this Banana Man sometimes acts as a Super Hero and as well as a Super Villain. Also, he travels among the people as just a normal person while hiding his true identity from the world (Of course I know who he is. But I won't tell you 🤐).
